--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,9 @@ ul,li{
 	height:100%;
 	background:rgba(255,255,255,0.5);
 }
+.middle .content ul a{
+	color:#666;
+}
 .middle .content ul li{
 	width:100%;
 	height:150px;
@@ -176,10 +179,15 @@ ul,li{
 	margin:25px;
 }
 .middle .content .share{
-	display:block;
-	float:left;
-	margin:25px 0;
-	margin-right:25px;
+	display:-webkit-box; 
+    float: left;
+    /* margin: 0px 0; */
+    margin-right: 25px;
+    margin-top: 25px;
+    display: block;
+    width: 75%;
+    height: 80%;
+    line-height: 20px;
 }
 .bottom{
 	width: 20%;
@@ -193,7 +201,7 @@ ul,li{
 .bottomLeft{
 	display:block;
 	float:left;
-	width:40%;
+	width:15%;
 	height:100%;
 }
 .image img{
@@ -234,9 +242,49 @@ ul,li{
 .code{
 	position: absolute;
     width: 100px;
-    margin-left: 46%;
-    margin-top: 38%;
+    margin-left: 47%;
+    margin-top: 28%;
 }
 .code img{
 	width: 100%;
+}
+.share{
+	/*overflow: hidden;
+	text-overflow:ellipsis;
+	white-space: nowrap;*/
+	overflow:hidden; 
+	text-overflow:ellipsis;
+	display:-webkit-box; 
+	-webkit-box-orient:vertical;
+	-webkit-line-clamp:5;
+}
+.share span{
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-height: 30px;
+}
+.anm{
+	width: 100px;
+   
+   	display: none;
+    position: absolute;
+	border-top:1px solid #888;
+	line-height:50px;
+	margin-top:25px;
+	text-align:center;
+}
+.contentName{
+	margin-top:100px;
+	width:60%;
+	margin-left:20%;
+}
+.anmContent{
+	color:#888;
+}
+.contentName li{
+	display:none;
 }
